fix big gaps in front page

--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -85,7 +85,7 @@
 .bar {
 	position: relative;
 	background: var(--primary-accent);
-	padding: 60px 0;
+	padding: 30px 0;
 }
 
 .bar.color-white h1,
